--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,13 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+
+        }
+        maven {
+            url  'https://tokbox.bintray.com/maven'
+        }
     }
 }
 
