--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Student" />
+        <activity android:name=".Professor" />
+        <activity android:name=".StudSession" />
+        <activity android:name=".ProfSession"></activity>
     </application>
 
 </manifest>
