--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.opentok.android:opentok-android-sdk:2.12.0'
     compile 'pub.devrel:easypermissions:0.4.0'
+    compile 'com.android.volley:volley:1.0.0'
 }
