--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
@@ -28,13 +28,17 @@ dependencies {
     compile 'com.opentok.android:opentok-android-sdk:2.12.0'
     compile 'pub.devrel:easypermissions:0.4.0'
     compile 'com.android.support:appcompat-v7:26.0.0'
-
-
-
     compile 'com.google.android.exoplayer:exoplayer:r1.5.10'
     compile 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
     // Adds Google VR spatial audio support
-    compile 'com.google.vr:sdk-audio:1.80.0'
+  //  compile 'com.google.vr:sdk-audio:1.80.0'
     // Required for all Google VR Apps
-    compile 'com.google.vr:sdk-base:1.80.0'
+ //   compile 'com.google.vr:sdk-base:1.80.0'
+    implementation project(':sdk-common-1.120.0')
+    implementation project(':sdk-commonwidget-1.120.0')
+    implementation project(':sdk-videowidget-1.120.0')
+    implementation project(':sdk-audio-1.120.0')
+    implementation project(':sdk-base-1.120.0')
+
+
 }
