--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
@@ -28,4 +28,9 @@ dependencies {
     compile 'com.opentok.android:opentok-android-sdk:2.12.0'
     compile 'pub.devrel:easypermissions:0.4.0'
     compile 'com.android.volley:volley:1.0.0'
+    implementation project(':sdk-audio-1.120.0')
+    implementation project(':sdk-base-1.120.0')
+    implementation project(':sdk-common-1.120.0')
+    implementation project(':sdk-commonwidget-1.120.0')
+    implementation project(':sdk-videowidget-1.120.0')
 }
