--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app'
+include ':app', ':sdk-audio-1.120.0', ':sdk-base-1.120.0', ':sdk-common-1.120.0', ':sdk-commonwidget-1.120.0', ':sdk-videowidget-1.120.0'
